--- a/src/app/experience-create/experience-accordion/experience-accordion.component.html
+++ b/src/app/experience-create/experience-accordion/experience-accordion.component.html
@@ -1,17 +1,17 @@
-<div class="">
-  <div class="">
-    <button title="Create an experiment" class="btn btn-sm btn-outline-primary mr-2 " (click)="acc.toggle('experience')"><i class="fa fa-flask"></i> </button>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" i18n="Create experience@@createExperience">Experiment</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
 
-  <ngb-accordion id="experience-acc" name="experience-acc" #acc="ngbAccordion" activeIds="ngb-panel-0">
-    <ngb-panel id="experience" name="experience" title="Experience">
-      <ng-template id="experience-template" ngbPanelContent>
-        <div>
-          <zen-experience-create-no-stock
-            (onOperationExperiment)="notifyExperiment($event)" [stock]="stock_input"></zen-experience-create-no-stock>
-        </div>
-      </ng-template>
-    </ngb-panel>
-  </ngb-accordion>
+  <div class="modal-body">
 
-</div>
+    <zen-experience (onOperationExperiment)="notifyExperiment($event)" [stockInput]="stock_input"></zen-experience>
+
+  </div>
+</ng-template>
+
+<button class="btn btn-sm btn-outline-primary" title="Add Stock" (click)="openLg(content)"><i class="fa fa-flask"></i></button>
+
