--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -22,6 +22,7 @@
       </div>
 
       <div class="form-group">
+        <label for="category" i18n="Category@@category">Category</label>:
         <select [(ngModel)]="experience.category" class="form-control" name="category">
           <option *ngFor="let category of experience.categories" [ngValue]="category[0]">{{ category[1] }}</option>
         </select>
@@ -55,6 +56,14 @@
         <label for="nickname" i18n="Nickname@@nickname">Nickname</label>: 
         <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="experience.nickname" (keydown.enter)="edit();" name="nickname">
       </div>
+
+      <div class="form-group">
+        <label for="intent" i18n="Intent@@intent">Intent</label>:
+        <select [(ngModel)]="experience.intent" class="form-control" name="intent">
+          <option *ngFor="let intent of experience.intents" [ngValue]="intent[0]">{{ intent[1] }}</option>
+        </select>
+      </div>
+
       <div class="form-group">
         <input type="checkbox" class="form-input border border-primary" id="archived" name="archived" [(ngModel)]="experience.archived" [checked]="experience.archived">
         <label for="checkbox" i18n="Archived@@archived">Archived</label>
