Report with all result implemented.

--- a/src/app/account/account-footer/account-footer.component.html
+++ b/src/app/account/account-footer/account-footer.component.html
@@ -3,13 +3,15 @@
     <ul class="m-0 p-0 list-unstyled account-size">
       <li><span i18n="Equity@@equity">Equity: R$</span> {{ account.equity | number: '1.2-2' }}/{{ account.total_equity | number: '1.2-2' }}</li>
       <li><span i18n="Operation Cost@@operationCost">Operation cost: R$</span> {{ account.operation_cost_position | number: '1.2-2' }}</li>
+      <li><zen-total-profit-report></zen-total-profit-report></li>
+
     </ul>
   </div>
   <div class="col-3">
     <ul class="m-0 p-0 list-unstyled account-size">
       <li><span i18n="Day Trade@@dayTrade">Day Trade: R$</span> {{ account.operation_cost_day_trade | number: '1.2-2' }}</li>
       <li><span i18n="Fraction@@fraction">Fraction: R$</span> {{ account.operation_cost_fraction | number: '1.2-2' }}</li>
-      <li><zen-shark></zen-shark>
+      <li><zen-shark></zen-shark></li>
     </ul>
   </div>
 </div>
