Report screen created

--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -11,7 +11,8 @@
         <a class="p-2 text-dark" href="/operations-center" i18n="Operations Center@@operationsCenter">Operations Center</a>
       </div>
         <div class="col-12 text-center">
-        <a class="p-2 text-dark" href="/learning" i18n="Learning@@learning">Learning</a>
+        <a class="p-2 text-dark" href="/learning" i18n="Learning@@learning">Learning</a> |
+        <a class="p-2 text-dark" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
       </div>
     </div>
 
