--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -21,20 +21,28 @@
         <input type="text" class="form-control form-control-sm border border-primary" id="limit" [(ngModel)]="experience.limit" (keydown.enter)="edit();" name="limit">
       </div>
 
-      <div class="form-group">
-        <label for="category" i18n="Category@@category">Category</label>:
-        <select [(ngModel)]="experience.category" class="form-control form-control-sm" name="category">
-          <option *ngFor="let category of experience.categories" [ngValue]="category[0]">{{ category[1] }}</option>
-        </select>
+      <div class="form-row mb-2">
+        <div class="col-4">
+          <label for="category" i18n="Category@@category">Category</label>:
+        </div>
+        <div class="col-8">
+          <select [(ngModel)]="experience.category" class="form-control form-control-sm" name="category">
+            <option *ngFor="let category of experience.categories" [ngValue]="category[0]">{{ category[1] }}</option>
+          </select>
+        </div>
       </div>
 
-      <div class="form-group">
-        <label for="estimatedDate" i18n="Estimated Date@@estimatedDate">Estimated Date</label>:
-        <div class="input-group">
-          <input class="form-control form-control-sm" placeholder="yyyy-mm-dd"
-               name="estimated_date" [(ngModel)]="dateSelected" ngbDatepicker #d="ngbDatepicker">
-          <div class="input-group-append">
-            <button class="btn btn-sm btn-outline-secondary fa fa-calendar" (click)="d.toggle()" type="button"></button>
+      <div class="form-row">
+        <div class="col-4">
+          <label for="estimatedDate" i18n="Estimated Date@@estimatedDate">Estimated Date</label>:
+        </div>
+        <div class="col-8">
+          <div class="input-group">
+            <input class="form-control form-control-sm" placeholder="yyyy-mm-dd"
+                 name="estimated_date" [(ngModel)]="dateSelected" ngbDatepicker #d="ngbDatepicker">
+            <div class="input-group-append">
+              <button class="btn btn-sm btn-outline-secondary fa fa-calendar" (click)="d.toggle()" type="button"></button>
+            </div>
           </div>
         </div>
       </div>
@@ -68,11 +76,15 @@
         <input type="text" class="form-control form-control-sm border border-primary" id="nickname" [(ngModel)]="experience.nickname" (keydown.enter)="edit();" name="nickname">
       </div>
 
-      <div class="form-group">
-        <label for="intent" i18n="Intent@@intent">Intent</label>:
-        <select [(ngModel)]="experience.intent" class="form-control form-control-sm" name="intent">
-          <option *ngFor="let intent of experience.intents" [ngValue]="intent[0]">{{ intent[1] }}</option>
-        </select>
+      <div class="form-row mb-3">
+        <div class="col-4">
+          <label for="intent" i18n="Intent@@intent">Intent</label>:
+        </div>
+        <div class="col-8">
+          <select [(ngModel)]="experience.intent" class="form-control form-control-sm" name="intent">
+            <option *ngFor="let intent of experience.intents" [ngValue]="intent[0]">{{ intent[1] }}</option>
+          </select>
+        </div>
       </div>
 
       <div class="form-group">
