Added Tech Analysis first version

--- a/src/app/buy/quick-buy/quick-buy.component.html
+++ b/src/app/buy/quick-buy/quick-buy.component.html
@@ -1,3 +1,3 @@
 <button title="Send a buy and execute in one step." type="button" class="btn btn btn-sm" (click)="quickBuy();">
-  <i class="fa fa-shopping-bag"></i>
+  <i class="fas fa-shopping-bag"></i>
 </button>
