--- a/src/app/experience-create/experience-accordion/experience-accordion.component.html
+++ b/src/app/experience-create/experience-accordion/experience-accordion.component.html
@@ -7,11 +7,9 @@
   </div>
 
   <div class="modal-body">
-
     <zen-experience (onOperationExperiment)="notifyExperiment($event)" [stockInput]="stock_input"></zen-experience>
-
   </div>
 </ng-template>
 
-<button class="btn btn-sm btn-outline-primary" title="Add Stock" (click)="openLg(content)"><i class="fa fa-flask"></i></button>
+<button class="btn btn-sm btn-outline-primary" title="Add Stock" (click)="openLg(content)"><i class="fas fa-flask"></i></button>
 
