--- a/src/app/operation/experience-detailed-button/experience-detailed-button.component.html
+++ b/src/app/operation/experience-detailed-button/experience-detailed-button.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-primary mr-1" (click)="retrieveDetailed();"><i class="fa fa-angle-double-down"></i></button>
+<button type="button" class="btn btn-primary mr-1" (click)="retrieveDetailed();"><i class="fas fa-angle-double-down"></i></button>
