--- a/src/app/operation/operation-accordion/operation-accordion.component.html
+++ b/src/app/operation/operation-accordion/operation-accordion.component.html
@@ -13,4 +13,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fa fa-flask"></i></button>
+<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fas fa-flask"></i></button>
