--- a/src/app/stock-edit/auto-update/auto-update.component.html
+++ b/src/app/stock-edit/auto-update/auto-update.component.html
@@ -5,7 +5,7 @@
   (click)="autoUpdateStock()" 
   i18n-title="Auto Update title@@autoUpdateTitle"
   title="Retrieve the price from a service." >
-    <i class="fa fa-cloud-download"></i>
+    <i class="fas fa-cloud-download"></i>
 </button>
 
 <button
@@ -15,5 +15,5 @@
   (click)="autoUpdateStock()" 
   i18n-title="Auto Update Error title@@autoUpdateErrorTitle"
   title="Error on retrieving price." >
-    <i class="fa fa-exclamation-triangle"></i>
+    <i class="fas fa-exclamation-triangle"></i>
 </button>
