--- a/src/app/experience/experience-card/experience-card.component.html
+++ b/src/app/experience/experience-card/experience-card.component.html
@@ -11,15 +11,17 @@
       </div>
 
       <div class="col-4">
-        <button class="btn btn-outline-primary btn-sm mr-1" (click)="toggleEdit()" *ngIf="editable"><i class="fa fa-edit"></i></button>
+        <button class="btn btn-outline-primary btn-sm mr-1" (click)="toggleEdit()" *ngIf="editable"><i class="fas fa-edit"></i></button>
         <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperience($event)" ></zen-quick-buy>
         <zen-paper-quick-buy class="mr-1" [experience]="experience"
                            (onOperationChanged)="updateExperience($event)" ></zen-paper-quick-buy>
       </div>
 
-      <div class="col-1">
+      <div class="col-2">
         <zen-note-modal [operation_pk]="experience.pk"></zen-note-modal>
+        <zen-analysis-modal [analysisPk]="experience.analysis"></zen-analysis-modal>
       </div>
+
 
       <div class="col-1" (click)="markToUpdate()">
         <ngb-rating [max]="1" [resettable]="true" [(rate)]="experience.favorite"
