--- a/src/app/experience/experience-edit/experience-edit.component.html
+++ b/src/app/experience/experience-edit/experience-edit.component.html
@@ -41,20 +41,20 @@
             <input class="form-control form-control-sm" placeholder="yyyy-mm-dd"
                  name="estimated_date" [(ngModel)]="dateSelected" ngbDatepicker #d="ngbDatepicker">
             <div class="input-group-append">
-              <button class="btn btn-sm btn-outline-secondary fa fa-calendar" (click)="d.toggle()" type="button"></button>
+              <button class="btn btn-sm btn-outline-secondary far fa-calendar-alt" (click)="d.toggle()" type="button"></button>
             </div>
           </div>
         </div>
       </div>
 
       <button type="button" class="btn btn-primary btn-sm mr-1" (click)="edit();"
-                            [disabled]="!editExperienceForm.form.valid"><span i18n="Edit@@edit"><span class="fa fa-check"></span></span>
+                            [disabled]="!editExperienceForm.form.valid"><span i18n="Edit@@edit"><span class="fas fa-check"></span></span>
       </button>
 
       <zen-quick-buy class="mr-1" [experience]="experience" (onOperationBought)="updateExperiment($event)" ></zen-quick-buy>
       <zen-paper-quick-buy class="mr-1" [experience]="experience"
                            (onOperationChanged)="updateExperiment($event)" ></zen-paper-quick-buy>
-        <button class="btn btn-outline-primary btn-sm" title="return_card" (click)="toggleEdit()" *ngIf="editable"><i class="fa fa-backward"></i></button>
+        <button class="btn btn-outline-primary btn-sm" title="return_card" (click)="toggleEdit()" *ngIf="editable"><i class="fas fa-backward"></i></button>
 
     </div>
     <div class="col-6">
