--- a/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
+++ b/src/app/learning/paper-quick-buy/paper-quick-buy.component.html
@@ -1,5 +1,5 @@
 <button i18n-title="Ppbuy tip@@ppBuyTip" title="Make a paper buy (A fake buy just for learning purposes)" type="button" class="btn btn btn-sm"
     (click)="quickPaperBuy();"
      i18n="Quick Paper Purchase@@quickPaperPurchase">
-  <i class="fa fa-graduation-cap"></i>
+  <i class="fas fa-graduation-cap"></i>
 </button>
