--- a/src/app/operation/buy-edit/buy-edit.component.html
+++ b/src/app/operation/buy-edit/buy-edit.component.html
@@ -19,7 +19,7 @@
 
       <div class="form-group">
         <button type="button" class="btn btn-sm btn-primary mr-1" (click)="edit(buy);" [disabled]="!buyEditForm.form.valid"
-                              i18n="Edit@@edit"><span class="fa fa-check"></span>
+                              i18n="Edit@@edit"><span class="fas fa-check"></span>
         </button>
         <zen-quick-sell class="mr-1" [operation]="getQuickSell()" (onOperationSold)="updateBuy()"></zen-quick-sell>
         <zen-note-modal [operation_pk]="buy.pk"></zen-note-modal>
