--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -5,7 +5,7 @@
     <div class="col-3">
        <zen-experience-accordion (onOperationExperiment)="addExperience($event)"></zen-experience-accordion>
     </div>
-    <div class="col-9" *ngIf="experiences.length == 0"><span><i class="fa fa-arrow-lt"></i><span i18n="Begin
+    <div class="col-9" *ngIf="experiences.length == 0"><span><i class="fas fa-arrow-lt"></i><span i18n="Begin
           Experience@@beginExperience "> Click the button to begin an experience</span></span></div>
   </div>
    
