--- a/src/app/stock/add-stock/add-stock.component.html
+++ b/src/app/stock/add-stock/add-stock.component.html
@@ -56,4 +56,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fa fa-plus"></i></button>
+<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fas fa-plus"></i></button>
