Improving the interface of analysis

--- a/src/app/note/note-modal/note-modal.component.html
+++ b/src/app/note/note-modal/note-modal.component.html
@@ -15,7 +15,7 @@
       </div>
     </form>
     <div class="row mt-4">
-      <div class="col-12" style="overflow: auto; height: 40rem;">
+      <div class="col-12" style="overflow: auto; height: 55vh;">
       <hr>
         <ul class="list-group list-group-flush">
           <li class="list-group-item" *ngFor="let note of notes">
