Top and Bottom added to analysis

--- a/src/app/trade-system/list-analysis/list-analysis.component.html
+++ b/src/app/trade-system/list-analysis/list-analysis.component.html
@@ -3,6 +3,8 @@
   (analysisAdded)="updateList()"
 ></zen-tech-analysis-create>
 
+<zen-analysis-update [analysis]="analysis"></zen-analysis-update>
+
 <div style="overflow: auto; height: 30rem">
   <div
     class="card mb-1 mt-2"
