--- a/src/app/trade-system/tech-analysis-create/tech-analysis-create.component.html
+++ b/src/app/trade-system/tech-analysis-create/tech-analysis-create.component.html
@@ -2,7 +2,8 @@
   <div class="card-body">
     <form #addTechAnalysis="ngForm">
       <div class="form-group">
-        <label for="indicator">Seelct the indicator</label>
+        <label for="indicator" i18n="IndicatorSelect@@indicatorSelect">
+          Select the indicator</label>
         <select
           [(ngModel)]="techAnalyze.indicator"
           class="form-control form-control-sm"
@@ -13,7 +14,7 @@
       </div>
 
       <div class="form-group">
-        <label for="comment">*Comment</label>
+        <label for="comment" i18n="Comment@@comment">*Comment</label>
         <textarea
           class="form-control form-control-sm"
           id="comment"
