--- a/src/app/trade-system/analysis-update/analysis-update.component.html
+++ b/src/app/trade-system/analysis-update/analysis-update.component.html
@@ -27,7 +27,7 @@
               (click)="updateAnalysis();"
               class="btn btn-primary"
               i18n="Update Analysis@@updateAnalysis">
-              update
+               <span class="fas fa-check"></span>
             </button>
           </div>
       </div>
