--- a/src/app/trade-system/list-analysis/list-analysis.component.html
+++ b/src/app/trade-system/list-analysis/list-analysis.component.html
@@ -3,7 +3,9 @@
   (analysisAdded)="updateList()"
 ></zen-tech-analysis-create>
 
-<zen-analysis-update [analysis]="analysis"></zen-analysis-update>
+<div class="mt-2">
+  <zen-analysis-update [analysis]="analysis"></zen-analysis-update>
+</div>
 
 <div style="overflow: auto; height: 30rem">
   <div
