--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -1,18 +1,18 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 border-bottom box-shadow zen-menu-bg">
-  <h5 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 text-dark zen_menu retroshadow" href="/zenindex">ZT</a></h5>
+  <h5 class="my-0 mr-md-auto font-weight-normal"><a class="p-2 retroshadow" href="/zenindex">ZT</a></h5>
 
   <nav class="my-2 my-md-0 mr-md-3">
     <div class="row">
       <div class="col-12 text-center">
-        <a class="p-2 text-dark" href="/stock" i18n="Stock@@stock">Stock</a> |
-        <a class="p-2 text-dark" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
-        <a class="p-2 text-dark" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
-        <a class="p-2 text-dark" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
-        <a class="p-2 text-dark" href="/operations-center" i18n="Operations Center@@operationsCenter">Operations Center</a>
+        <a class="p-2" href="/stock" i18n="Stock@@stock">Stock</a> |
+        <a class="p-2" href="/experience" i18n="Experiences@@experiences">Experiences</a> |
+        <a class="p-2" href="/buy-focus" i18n="Purchases@@purchases">Purchases</a> |
+        <a class="p-2" href="/sell-focus" i18n="Sales@@sales">Sales</a> |
+        <a class="p-2" href="/operations-center" i18n="Operations Center@@operationsCenter">Operations Center</a>
       </div>
         <div class="col-12 text-center">
-        <a class="p-2 text-dark" href="/learning" i18n="Learning@@learning">Learning</a> |
-        <a class="p-2 text-dark" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
+        <a class="p-2" href="/learning" i18n="Learning@@learning">Learning</a> |
+        <a class="p-2" href="/report-overview" i18n="Report Overview@@reportOverview">Report</a>
       </div>
     </div>
 
