--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -6,7 +6,6 @@
   <section class="row">
     <div class="col-12">
       <h4 style="color: rgba(0,0,0,0.6);" i18n="Purchases header@@purchasesHeader">Purchases</h4>
-
       <hr>
       <zen-buy-list [buys]="buys" (onOperationUpdated)="updateAll()"></zen-buy-list>
     </div>
@@ -15,7 +14,7 @@
 
   <!-- The experiences -->
  
-  <section class="row mt-4">
+  <section class="row mt-4 overview-exp">
     <div class="col-12">
       <div class="row">
         <div class="col-2">
