--- a/src/app/stock-edit/auto-update/auto-update.component.html
+++ b/src/app/stock-edit/auto-update/auto-update.component.html
@@ -5,7 +5,7 @@
   (click)="autoUpdateStock()" 
   i18n-title="Auto Update title@@autoUpdateTitle"
   title="Retrieve the price from a service." >
-    <i class="fas fa-cloud-download"></i>
+    <i class="fas fa-file-download"></i>
 </button>
 
 <button
