--- a/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
+++ b/src/app/zen-auth/zentrader-auth/zentrader-auth.component.html
@@ -12,5 +12,5 @@
     (keydown.enter)="userLogin()" name="password">
   </div>
 
-  <button type="button" class="btn btn-primary" (click)="userLogin()">log me in</button>
+  <button type="button" class="btn btn-primary" (click)="userLogin()">Login</button>
 </form>
