--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,7 +1,7 @@
 <zen-menu></zen-menu>
 
 <div class="container-fluid">
-  <zen-add-stock class="pull-right" (onStockAdded)="appendNewStock($event)"></zen-add-stock>
+  <zen-add-stock (onStockAdded)="appendNewStock($event)"></zen-add-stock>
   <div class="row mt-4">
       <div class="mb-3 ml-2" *ngFor="let stock of stocks; let i = index">
         <zen-stock-card [stock]="stock" (onStockUpdated)="processUpdate($event)"></zen-stock-card>
