--- a/src/app/zen-auth/welcome-page/welcome-page.component.html
+++ b/src/app/zen-auth/welcome-page/welcome-page.component.html
@@ -1,6 +1,6 @@
 
 <div class="container-fluid stra">
-  <div class="display-3">Welcome</div>
+  <div class="display-3 welcome">Welcome</div>
   <hr>
 
   <div class="lead">Please login to proceed</div>
