--- a/src/app/stock/add-stock/add-stock.component.html
+++ b/src/app/stock/add-stock/add-stock.component.html
@@ -7,42 +7,37 @@
   </div>
 
   <div class="modal-body">
-    <div class="container-fluid">
       <form #addStockForm="ngForm">
-        <div class="row">
-          <div class="form-group">
+        <div class="form-row">
+          <div class="form-group col-6">
             <label for="stockCode" i18n="Code@@code">Code: </label>
-            <input type="text" id="stockCode" class="form-control w-50" [(ngModel)]="stock.code" name="code">
+            <input type="text" id="stockCode" class="form-control" [(ngModel)]="stock.code" name="code">
           </div>
-
-          <div class="form-group">
-            <label for="stockPrice" i18n="Price@@price">Price: </label>
-            <input type="number" id="stockPrice" class="form-control w-50" [(ngModel)]="stock.price" name="price">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="form-group">
+          <div class="form-group col-6">
             <label for="stockPrice" i18n="Name@@name">Name: </label>
-            <input type="text" id="stockName" class="form-control w-75" [(ngModel)]="stock.name" name="name">
+            <input type="text" id="stockName" class="form-control" [(ngModel)]="stock.name" name="name">
           </div>
-
-          <div class="form-group">
-            <label for="stockSector" i18n="Sector@@sector">Sector: </label>
-            <input type="text" id="stockSector" class="form-control w-75" [(ngModel)]="stock.sector" name="sector">
-          </div>
-
         </div>
 
-        <div class="row">
-          <div class="form-group">
+        <div class="form-row">
+          <div class="form-group col-6">
+            <label for="stockPrice" i18n="Price@@price">Price: </label>
+            <input type="number" id="stockPrice" class="form-control" [(ngModel)]="stock.price" name="price">
+          </div>
+
+          <div class="form-group col-6">
+            <label for="stockSector" i18n="Sector@@sector">Sector: </label>
+            <input type="text" id="stockSector" class="form-control" [(ngModel)]="stock.sector" name="sector">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-6">
             <label for="stockSubsector" i18n="Subsector@@subsector">Subsector: </label>
             <input type="text" id="stockSubsector" class="form-control" [(ngModel)]="stock.subsector" name="subsector">
           </div>
         </div>
-
       </form>
-    </div>
   </div>
 
   <div class="modal-footer">
@@ -56,4 +51,4 @@
   </div>
 </ng-template>
 
-<button class="btn btn-outline-primary" style="border-right-color: #CDE5CA;" title="Add Stock" (click)="openLg(content)"><i class="fas fa-plus"></i></button>
+<button class="btn btn-outline-primary" title="Add Stock" (click)="openLg(content)"><i class="fas fa-plus"></i></button>
